dark mode and sole some bugs

--- a/src/style.css
+++ b/src/style.css
@@ -204,6 +204,13 @@ input::placeholder {
     border-radius: 8px;
     color:black;
 }
+
+@media only screen and (max-width: 500px){
+    #downloadFile{
+        padding: 0.6rem 1.5rem;
+
+    }
+}
 #goBackButton{
     background: none;
     border:0;
@@ -314,7 +321,13 @@ input[type=range]:focus{
     margin-right: 10px;
     color:rgb(26,115,232);
 }
-
+@media only screen and (max-width: 500px){
+    .cropButtonContainer button{
+        padding: 0.8rem 1.0rem;
+        margin-bottom: 10px;
+        margin-right: 7px;
+    }
+}
 #cropActionButton {
     padding: 0.8rem 1.6rem;
     background: rgb(26,115,232);
@@ -410,4 +423,174 @@ input[type=range]:focus{
 }
 #goBackButton:hover{
     color:#FBC02D;
+}
+#resetImage{
+    border:0;
+    background:none;
+    color: rgb(26,115,232);
+
+}
+
+.active{
+    background-color: rgb(245,245,245);
+}
+
+#resetImage{
+    margin-right: 10px;
+}
+
+.sliderBox{
+    display: none;
+}
+.sliderToggleBar{
+    display:flex;
+    flex-direction: row;
+    overflow: auto;
+}
+.sliderToggleButton{
+    background-color: rgb(60, 60, 60);
+    color: rgb(200,200,200);
+    padding: 0.8rem 1.25rem;
+    border-radius: 8px;
+    border: none;
+    margin-right:10px;
+}
+.toggleActive{
+    background-color: #448AFF;
+    color: black;
+}
+
+@media only screen and (min-width: 500px){
+    .sliderBox{
+        display: block;
+    }
+    .sliderToggleBar{
+        display:none;
+    }
+    
+}
+
+input:-webkit-autofill,
+input:-webkit-autofill:hover, 
+input:-webkit-autofill:focus, 
+input:-webkit-autofill:active
+{
+    -webkit-text-fill-color: rgb(100,100,100) !important;
+    -webkit-box-shadow: 0 0 0 30px #eceff0 inset !important;
+
+}
+
+#noResultAnimation{
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: 13vh;
+}
+#noResultAnimation>h1{
+    font-size: 3rem;
+    margin-top: -7rem;
+    margin-bottom: 1rem;
+}
+#noResultAnimation>p{
+    font-size: 1.25rem;
+}
+#mainAnimation{
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: 20vh;
+}
+#mainAnimation>h1{
+    font-size: 2rem;
+    margin-top: -3rem;
+    margin-bottom: 1rem;
+}
+#mainAnimation>p{
+    font-size: 1.25rem;
+}
+
+@media (prefers-color-scheme: dark) {
+    input:-webkit-autofill,
+input:-webkit-autofill:hover, 
+input:-webkit-autofill:focus, 
+input:-webkit-autofill:active
+{
+    -webkit-text-fill-color: white !important;
+    -webkit-box-shadow: 0 0 0 30px rgb(46,46,46) inset !important;
+
+}
+    *{
+        color:rgb(220,220,220);
+    }
+body, #recKeyword, #header, #headerEditor{
+    background-color: rgb(18,18,18);
+}
+#header, #headerEditor {
+    border-bottom: 1px solid rgba(70,70,70, 0.4);
+    
+}
+#searchBarContainer{
+    background-color: rgb(46,46,46);
+}
+.keywordRecommendation{
+    background-color: rgb(46,46,46);
+    border:0;
+    color:rgb(220,220,220);
+}
+input::placeholder {
+    color:rgb(120,120,120);
+  }
+.keywordRecommendation:hover{
+    background-color: #448AFF;
+    color:black;
+    border:0;
+}
+.searchBar::placeholder{
+    color:rgb(50,50,50);
+}
+#goBackButton, #resetImage{
+    color:rgb(128,175,255);
+}
+#editFunctionBar{
+    background-color: rgb(38,38,38);
+}
+#adjustmentBar, #cropOptionsBox, .active{
+    background-color: rgb(45,45,45);
+}
+#artboard{
+    background-color: rgb(18,18,18);
+}
+
+#goBackButton:hover{
+    color:#FFEA00;
+}
+#downloadFile{
+    background-color:#FFD600;
+    color: black;
+}
+input[type=range]::-webkit-slider-thumb, #cropActionButton{
+    background: #448AFF;
+}
+input[type=range] {
+    background-color: rgb(80,80,80);
+}
+.editFunctionButton span{
+    color: rgb(150,150,150);
+}
+.cropButtonContainer button{
+    border: 2px #448AFF solid;
+    color:#448AFF;
+}
+#cropActionButton{
+    color:black;
+}
+.cropButtonContainer>button:active{
+    color:#FFD600;
+    border: 2px #FFD600 solid;
+}
+#cropActionButton:active{
+    background-color:#FFD600;
+}
 }
